# doc-bot

./: .gitignore  README.md  docker-compose.yaml  mypy.ini
.github/workflows/: proxy_test.yaml  release.yaml
litellm/: Dockerfile  config.yaml
proxy/: Dockerfile  pyproject.toml
proxy/app/: __init__.py  main.py
proxy/app/core/: __init__.py  auth.py  config.py
proxy/app/routers/audio/: __init__.py  controller.py  schemas.py  views.py
proxy/app/routers/embeddings/: __init__.py  controller.py  schemas.py  views.py
proxy/app/routers/images/: __init__.py  controller.py  schemas.py  views.py
proxy/tests/: __init__.py
proxy/tests/endpoint/: test_audio.py  test_embedding.py  test_images.py
